# gg2contracts-web

./: .gitignore  README.md  alembic.ini  compose.env  compose.yml  logging.conf  main.py  pyproject.toml
doc/: sequence_diagram.md
docker/: Dockerfile
gg2haxxy25/backend/: gg2.py  main.py  tcpserver.py
gg2haxxy25/common/: basemodel.py  enums.py
gg2haxxy25/common/models/: contract.py  user.py
nginx/conf/: contracts.conf
src/: main.py  run_cli.py  run_discord_bot.py  run_gg2_backend.py
src/alembic/: README  env.py
src/alembic/versions/: 2025_03_11_2026-a4ba8d5c3962_initial_migration.py  2025_03_11_2040-4f1796f4d2b9_initial_migration.py  2025_03_21_2249-72f146ffef96_initial_migration.py  2025_04_30_1836-bc25a2b354a3_update_user_add_discord_username.py  2025_07_29_0144-e089fe787e16_add_user_rewards.py  2025_08_05_2156-2fb52a3b10cc_add_rewards.py
src/cli/: cli.py
src/cli/contracts/: __init__.py  delete.py  generate.py  list_contracts.py  purge.py
src/cli/rewards/: __init__.py  create.py  delete.py  grant.py  list_rewards.py  update.py
src/cli/users/: __init__.py  delete.py  list_users.py
src/contracts/common/: contract_gen.py  enums.py  logging.py  models.py  settings.py
src/contracts/discordbot/: bot.py  help_command.py  main.py  sendable.py
src/contracts/gg2/: lobby.py  main.py  messagehandler.py  tcpserver.py
src/contracts/webapp/: app.py  security.py  settings.py
src/gg2haxxy25/common/: contract_gen.py  enums.py  gg2model.py  models.py  settings.py
src/static/js/: main.js
src/templates/: base.html  index.html  updateme.html  users.html
(+54 files in other folders)
