[project]
name = "gg2contracts"
version = "0.1.2"
description = "Gang Garrison 2 Contracts Website and Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "click>=8.1.8",
    "fastapi>=0.115.11",
    "jinja2>=3.1.5",
    "nextcord>=3.0.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.23",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.8",
]

[tool.ruff.lint]
extend-select = ["I"]
